tests/unit/macho/x32/snapshots/unit__macho__x32__test_patching__change_dylib_id-2.snap
---
source: tests/unit/macho/x32/test_patching.rs
expression: changed_macho.name
---
Some(
    "very_very_very_very_very_very_very_longid.dylib",
)
