tests/unit/macho/x32/snapshots/unit__macho__x32__test_patching__change_dylib_name-2.snap
---
source: tests/unit/macho/x32/test_patching.rs
expression: changed_macho.libs
---
[
    "i386/libhello.dylib",
    "very_very_very_very_very_very_very_longid",
]
