tests/unit/macho/x32/snapshots/unit__macho__x32__test_patching__change_dylib_name.snap
---
source: tests/unit/macho/x32/test_patching.rs
expression: changed_macho
---
MachO {
    header: Header {
        magic: 0xfeedface,
        cputype: 7,
        cpusubtype: 0x3,
        filetype: "DYLIB",
        ncmds: 13,
        sizeofcmds: 996,
        flags: 0x100085,
        reserved: 0x0,
    },
    load_commands: [
        LoadCommand {
            offset: 28,
            command: Segment32(
                SegmentCommand32 {
                    cmd: 1,
                    cmdsize: 396,
                    segname: [
                        95,
                        95,
                        84,
                        69,
                        88,
                        84,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                    ],
                    vmaddr: 0,
                    vmsize: 4096,
                    fileoff: 0,
                    filesize: 4096,
                    maxprot: 7,
                    initprot: 5,
                    nsects: 5,
                    flags: 0,
                },
            ),
        },
        LoadCommand {
            offset: 424,
            command: Segment32(
                SegmentCommand32 {
                    cmd: 1,
                    cmdsize: 192,
                    segname: [
                        95,
                        95,
                        68,
                        65,
                        84,
                        65,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                    ],
                    vmaddr: 4096,
                    vmsize: 4096,
                    fileoff: 4096,
                    filesize: 4096,
                    maxprot: 7,
                    initprot: 3,
                    nsects: 2,
                    flags: 0,
                },
            ),
        },
        LoadCommand {
            offset: 616,
            command: Segment32(
                SegmentCommand32 {
                    cmd: 1,
                    cmdsize: 56,
                    segname: [
                        95,
                        95,
                        76,
                        73,
                        78,
                        75,
                        69,
                        68,
                        73,
                        84,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                    ],
                    vmaddr: 8192,
                    vmsize: 4096,
                    fileoff: 8192,
                    filesize: 164,
                    maxprot: 7,
                    initprot: 1,
                    nsects: 0,
                    flags: 0,
                },
            ),
        },
        LoadCommand {
            offset: 672,
            command: IdDylib(
                DylibCommand {
                    cmd: 13,
                    cmdsize: 44,
                    dylib: Dylib {
                        name: 24,
                        timestamp: 1,
                        current_version: 0,
                        compatibility_version: 0,
                    },
                },
            ),
        },
        LoadCommand {
            offset: 716,
            command: DyldInfoOnly(
                DyldInfoCommand {
                    cmd: 2147483682,
                    cmdsize: 48,
                    rebase_off: 8192,
                    rebase_size: 16,
                    bind_off: 8208,
                    bind_size: 24,
                    weak_bind_off: 0,
                    weak_bind_size: 0,
                    lazy_bind_off: 8232,
                    lazy_bind_size: 16,
                    export_off: 8248,
                    export_size: 16,
                },
            ),
        },
        LoadCommand {
            offset: 764,
            command: Symtab(
                SymtabCommand {
                    cmd: 2,
                    cmdsize: 24,
                    symoff: 8268,
                    nsyms: 3,
                    stroff: 8320,
                    strsize: 36,
                },
            ),
        },
        LoadCommand {
            offset: 788,
            command: Dysymtab(
                DysymtabCommand {
                    cmd: 11,
                    cmdsize: 80,
                    ilocalsym: 0,
                    nlocalsym: 0,
                    iextdefsym: 0,
                    nextdefsym: 1,
                    iundefsym: 1,
                    nundefsym: 2,
                    tocoff: 0,
                    ntoc: 0,
                    modtaboff: 0,
                    nmodtab: 0,
                    extrefsymoff: 0,
                    nextrefsyms: 0,
                    indirectsymoff: 8304,
                    nindirectsyms: 4,
                    extreloff: 0,
                    nextrel: 0,
                    locreloff: 0,
                    nlocrel: 0,
                },
            ),
        },
        LoadCommand {
            offset: 868,
            command: Uuid(
                UuidCommand {
                    cmd: 27,
                    cmdsize: 24,
                    uuid: [
                        151,
                        66,
                        53,
                        180,
                        109,
                        35,
                        49,
                        214,
                        146,
                        94,
                        155,
                        141,
                        239,
                        42,
                        123,
                        165,
                    ],
                },
            ),
        },
        LoadCommand {
            offset: 892,
            command: VersionMinMacosx(
                VersionMinCommand {
                    cmd: 36,
                    cmdsize: 16,
                    version: 657920,
                    sdk: 657920,
                },
            ),
        },
        LoadCommand {
            offset: 908,
            command: SourceVersion(
                SourceVersionCommand {
                    cmd: 42,
                    cmdsize: 16,
                    version: 0,
                },
            ),
        },
        LoadCommand {
            offset: 924,
            command: LoadDylib(
                DylibCommand {
                    cmd: 12,
                    cmdsize: 68,
                    dylib: Dylib {
                        name: 24,
                        timestamp: 2,
                        current_version: 79495168,
                        compatibility_version: 65536,
                    },
                },
            ),
        },
        LoadCommand {
            offset: 992,
            command: FunctionStarts(
                LinkeditDataCommand {
                    cmd: 38,
                    cmdsize: 16,
                    dataoff: 8264,
                    datasize: 4,
                },
            ),
        },
        LoadCommand {
            offset: 1008,
            command: DataInCode(
                LinkeditDataCommand {
                    cmd: 41,
                    cmdsize: 16,
                    dataoff: 8268,
                    datasize: 0,
                },
            ),
        },
    ],
    segments: Segments {
        segments: [
            Segment {
                cmd: 1,
                cmdsize: 396,
                segname: "__TEXT",
                vmaddr: 0,
                vmsize: 4096,
                fileoff: 0,
                filesize: 4096,
                maxprot: 7,
                initprot: 5,
                nsects: 5,
                flags: 0,
                data: 4096,
                sections(): Ok(
                    [
                        Section {
                            sectname: "__text",
                            segname: "__TEXT",
                            addr: 3936,
                            size: 34,
                            offset: 3936,
                            align: 4,
                            reloff: 0,
                            nreloc: 0,
                            flags: 2147484672,
                        },
                        Section {
                            sectname: "__symbol_stub",
                            segname: "__TEXT",
                            addr: 3970,
                            size: 6,
                            offset: 3970,
                            align: 1,
                            reloff: 0,
                            nreloc: 0,
                            flags: 2147484936,
                        },
                        Section {
                            sectname: "__stub_helper",
                            segname: "__TEXT",
                            addr: 3976,
                            size: 22,
                            offset: 3976,
                            align: 2,
                            reloff: 0,
                            nreloc: 0,
                            flags: 2147484928,
                        },
                        Section {
                            sectname: "__cstring",
                            segname: "__TEXT",
                            addr: 3998,
                            size: 15,
                            offset: 3998,
                            align: 0,
                            reloff: 0,
                            nreloc: 0,
                            flags: 2,
                        },
                        Section {
                            sectname: "__unwind_info",
                            segname: "__TEXT",
                            addr: 4016,
                            size: 72,
                            offset: 4016,
                            align: 2,
                            reloff: 0,
                            nreloc: 0,
                            flags: 0,
                        },
                    ],
                ),
            },
            Segment {
                cmd: 1,
                cmdsize: 192,
                segname: "__DATA",
                vmaddr: 4096,
                vmsize: 4096,
                fileoff: 4096,
                filesize: 4096,
                maxprot: 7,
                initprot: 3,
                nsects: 2,
                flags: 0,
                data: 4096,
                sections(): Ok(
                    [
                        Section {
                            sectname: "__nl_symbol_ptr",
                            segname: "__DATA",
                            addr: 4096,
                            size: 8,
                            offset: 4096,
                            align: 2,
                            reloff: 0,
                            nreloc: 0,
                            flags: 6,
                        },
                        Section {
                            sectname: "__la_symbol_ptr",
                            segname: "__DATA",
                            addr: 4104,
                            size: 4,
                            offset: 4104,
                            align: 2,
                            reloff: 0,
                            nreloc: 0,
                            flags: 7,
                        },
                    ],
                ),
            },
            Segment {
                cmd: 1,
                cmdsize: 56,
                segname: "__LINKEDIT",
                vmaddr: 8192,
                vmsize: 4096,
                fileoff: 8192,
                filesize: 164,
                maxprot: 7,
                initprot: 1,
                nsects: 0,
                flags: 0,
                data: 164,
                sections(): Ok(
                    [],
                ),
            },
        ],
    },
    entry: 0,
    old_style_entry: false,
    libs: [
        "i386/libhello.dylib",
        "very_very_very_very_very_very_very_longid",
    ],
    name: Some(
        "i386/libhello.dylib",
    ),
    little_endian: true,
    is_64: false,
    symbols(): [
        Ok(
            (
                "_hello",
                Nlist {
                    n_strx: 2,
                    n_type: 15,
                    n_sect: 1,
                    n_desc: 0,
                    n_value: 3936,
                },
            ),
        ),
        Ok(
            (
                "_printf",
                Nlist {
                    n_strx: 9,
                    n_type: 1,
                    n_sect: 0,
                    n_desc: 256,
                    n_value: 0,
                },
            ),
        ),
        Ok(
            (
                "dyld_stub_binder",
                Nlist {
                    n_strx: 17,
                    n_type: 1,
                    n_sect: 0,
                    n_desc: 256,
                    n_value: 0,
                },
            ),
        ),
    ],
    exports(): Ok(
        [
            Export {
                name: "_hello",
                info: Regular {
                    address: 3936,
                    flags: 0,
                },
                size: 0,
                offset: 3936,
            },
        ],
    ),
    imports(): Ok(
        [
            Import {
                name: "dyld_stub_binder",
                dylib: "very_very_very_very_very_very_very_longid",
                is_lazy: false,
                offset: 4096,
                size: 0,
                address: 4096,
                addend: 0,
                is_weak: false,
                start_of_sequence_offset: 0,
            },
            Import {
                name: "_printf",
                dylib: "very_very_very_very_very_very_very_longid",
                is_lazy: true,
                offset: 4104,
                size: 8,
                address: 4104,
                addend: 0,
                is_weak: false,
                start_of_sequence_offset: 0,
            },
        ],
    ),
}
