tests/unit/macho/x32/snapshots/unit__macho__x32__test_patching__rpath_change-2.snap
---
source: tests/unit/macho/x32/test_patching.rs
expression: changed_macho.rpaths
---
[
    "path_graf_path_graf_path_graf_path_graf",
]
